--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "fend-my-reads",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://oscarpaesi.github.io/fend-my-reads",
   "dependencies": {
+    "gh-pages": "^2.0.1",
     "immutability-helper": "^3.0.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
@@ -13,7 +15,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
